[project]
name = "cng"
version = "1.0.9"

dependencies = ["minio",
                "ibis-framework[duckdb]",
                "tippecanoe",
                "duckdb"
               ]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
extras = ["streamlit",
          "pydeck",
          "boto3",
          "botocore",
          "huggingface_hub"
      ]

[tool.pytest.ini_options]
testpaths = ["tests"]
